[gd_scene load_steps=2 format=3 uid="uid://bq2h7vu8seui6"]

[ext_resource type="Script" uid="uid://dnbvqy4dh1cc1" path="res://ColorSquare.gd" id="1_rp1k8"]

[node name="ColorStar" type="Node2D"]
script = ExtResource("1_rp1k8")

[node name="RedSquare" type="Polygon2D" parent="."]
scale = Vector2(1e-05, 1e-05)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5)

[node name="BlueSquare" type="Polygon2D" parent="."]
scale = Vector2(1e-05, 1e-05)
color = Color(0, 0, 1, 1)
polygon = PackedVector2Array(-0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5)

[node name="YellowSquare" type="Polygon2D" parent="."]
scale = Vector2(1e-05, 1e-05)
color = Color(1, 1, 0, 1)
polygon = PackedVector2Array(-0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5)

[node name="GreenSquare" type="Polygon2D" parent="."]
scale = Vector2(1e-05, 1e-05)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(-0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5)

[node name="PurpleSquare" type="Polygon2D" parent="."]
scale = Vector2(1e-05, 1e-05)
color = Color(1, 0, 1, 1)
polygon = PackedVector2Array(-0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5)

[node name="OrangeSquare" type="Polygon2D" parent="."]
scale = Vector2(1e-05, 1e-05)
color = Color(1, 0.45098, 0, 1)
polygon = PackedVector2Array(-0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5)

[node name="BrownSquare" type="Polygon2D" parent="."]
scale = Vector2(1e-05, 1e-05)
color = Color(0.744458, 0.456136, 0.206996, 1)
polygon = PackedVector2Array(-0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5)
